# unstately

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/readme/: CMakeLists.txt  main.cpp
examples/turnstile/: CMakeLists.txt  main.cpp
include/unstately/: unstately.h
src/: CMakeLists.txt
